2010-09-18  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Dirk Schulze.

        fast/css/preserve-user-specified-zoom-level-on-reload.html does not clean up after itself
        https://bugs.webkit.org/show_bug.cgi?id=46040

        Delete the sessionStorage property that this test adds once it's complete.
        Otherwise it fails when run with --iterations=2 and also causes a diff in
        in fast/dom/prototype-inheritance-2.html (which runs after it).

        * fast/css/preserve-user-specified-zoom-level-on-reload.html:

2010-09-17  David Hyatt  <hyatt@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=46027, image on gamespot.com paginates without bringing its enclosing border along.
        
        Make sure that unsplittable objects like replaced elements propagate their pagination strut outward to the parent block
        when appropriate.  An image on a line did this, but a block-level image did not.

        Added fast/multicol/image-inside-nested-blocks-with-border.html

        * fast/multicol/image-inside-nested-blocks-with-border-expected.txt: Added.
        * fast/multicol/image-inside-nested-blocks-with-border.html: Added.

2010-09-17  Dimitri Glazkov  <dglazkov@chromium.org>

        Remove passing tests from expectations.

        * platform/chromium/drt_expectations.txt: Removed tests that are now
            consistently passing on Chromium Windows DRT.

2010-09-17  David Hyatt  <hyatt@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=45993, convert printing to the new pagination model.

        Remove the overflow test, since the new model treats overflow:auto/scroll as unsplittable.

        * printing/page-break-always-for-overflow-expected.txt: Removed.
        * printing/page-break-always-for-overflow.html: Removed.

2010-09-17  Dan Bernstein  <mitz@apple.com>

        Reviewed by Simon Fraser.
